--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
     <p id="test">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, at deleniti voluptatem vero quae maxime qui voluptate commodi sit quidem consectetur ad quas sint id autem ipsum excepturi molestiae error.</p>
